[gd_scene load_steps=4 format=2]

[ext_resource path="res://misc_resources/basic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/PauseMenu.tscn" type="PackedScene" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]

[node name="StuckText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -204.5
margin_top = -39.0
margin_right = 204.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "Press space to flip the car"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -39.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "X km/h"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_bottom = 45.0
grow_horizontal = 2
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
